<resources>
    <string name="app_name">Modern Farm</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tanaman">Tanaman</string>
    <string name="detail">Detail</string>
    <string name="namatanaman">Nama Tanaman</string>
    <string name="jenistanaman">Jenis Tanaman</string>
    <string name="tambahkan">Tambah</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="caraTanam">Cara Menanam</string>
    <string name="dipublikasikan">Dipublikasikan Pada</string>
    <string name="title_favorites">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_about">About</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="delete">Delete</string>
</resources>