<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tanaman">

    <fragment
        android:id="@+id/navigation_tanaman"
        android:name="com.modernfarm.ui.tanaman.TanamanFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_tanaman" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.modernfarm.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_tutorial"
        android:name="com.modernfarm.ui.tutorial.TutorialFragment"
        android:label="@string/title_tutorial"
        tools:layout="@layout/fragment_tutorial" />

</navigation>