<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tanaman.TambahTanamanActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_padding_8dp">

        <ImageView
            android:id="@+id/imgTanaman"
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:scaleType="centerCrop"
            android:src="#4D000000"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp" />

        <ImageView
            android:id="@+id/ic_Camera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:layout_constraintBottom_toBottomOf="@+id/imgTanaman"
            app:layout_constraintEnd_toEndOf="@+id/imgTanaman"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgTanaman" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/namatanaman"
            app:layout_constraintTop_toBottomOf="@+id/imgTanaman"
            tools:layout_editor_absoluteX="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNamaTanaman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerjenis"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_bg_outlined"
            app:layout_constraintStart_toStartOf="@+id/textField"
            app:layout_constraintTop_toBottomOf="@+id/textField"
            app:layout_constraintWidth_percent="0.85" />

        <ImageButton
            android:id="@+id/btnTambahJenis"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/margin_padding_4dp"
            android:background="@drawable/ic_bg_outlined"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spinnerjenis"
            app:layout_constraintTop_toTopOf="@+id/spinnerjenis" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/deskripsi"
            app:layout_constraintTop_toBottomOf="@id/spinnerjenis">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textMultiLine"
                android:id="@+id/edtDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:lines="6" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/caraTanam"
            app:layout_constraintTop_toBottomOf="@id/textField2">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textMultiLine"
                android:id="@+id/edtCaraTanam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:lines="12" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/tambahTanaman"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:text="@string/tambahkan"
            app:layout_constraintTop_toBottomOf="@id/textField3"
            tools:layout_editor_absoluteX="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>