<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tanaman.TanamanDetailActivity">

    <ImageView
        android:id="@+id/imgTanaman"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:background="#4D000000"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/imgTanaman"
        app:layout_constraintTop_toTopOf="@+id/imgTanaman" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:background="@drawable/ic_rounded_top"
            android:padding="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvNamaTanaman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAllCaps="true"
                android:textColor="#E6000000"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Apel" />

            <TextView
                android:id="@+id/tvJenisTanaman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_4dp"
                app:layout_constraintEnd_toEndOf="@+id/tvNamaTanaman"
                app:layout_constraintStart_toStartOf="@+id/tvNamaTanaman"
                app:layout_constraintTop_toBottomOf="@+id/tvNamaTanaman"
                tools:text="Buah Buahan" />

            <TextView
                android:id="@+id/Dipublikasikan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/dipublikasikan"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvJenisTanaman" />

            <TextView
                android:id="@+id/tvDipublikasikan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/Dipublikasikan"
                tools:text="2020-01-02" />

            <TextView
                android:id="@+id/Deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/deskripsi"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvDipublikasikan"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/tvDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3dp"
                app:layout_constraintTop_toBottomOf="@+id/Deskripsi"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/CaraTanam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/caraTanam"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvDeskripsi"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/tvCaraTanam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3dp"
                app:layout_constraintTop_toBottomOf="@+id/CaraTanam"
                tools:text="@tools:sample/lorem/random" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:tint="@android:color/white"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@null"
        android:backgroundTint="@color/colorAccent"/>

</androidx.constraintlayout.widget.ConstraintLayout>